akdn menu overlap issue on responsive

--- a/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
@@ -563,7 +563,6 @@ h1.title {
         span {
             display: inline;
             background: #fff;
-            z-index: 999;
             position: relative;
             &:first-child {
                 font-size: 130%;
